[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bellavista-kolab-merfish"
version = "0.1.0"
authors = [
    {name = "Annabelle Coles", email = "acoles@salk.edu"},
]
description = "Python package for interactive visualization of imaging-based spatial transcriptomics (KoLab-MERFISH edition)."
keywords = ["spatial transcriptomics", "visualization", "napari", "python", "MERFISH"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dask[array]",
    "dask-image",
    "h5py",
    "imagecodecs",
    "matplotlib",
    "napari[all]==0.6.1",
    "napari-ome-zarr",
    "networkx",
    "numpy>=2",
    "ome-zarr",
    "pandas",
    "pyarrow",
    "scikit-image",
    "shapely",
    "tqdm",
    "zarr<3",
]

[project.urls]
Documentation = "https://bellavista.readthedocs.io"
Repository = "https://github.com/pkosurilab/BellaVista.git"
Issues = "https://github.com/pkosurilab/BellaVista/issues"

[project.scripts]
bellavista = "bellavista.bellavista:main"

[tool.hatch.build.targets.wheel]
packages = ["bellavista"]